    derived objects' contents.

  - `./bootstrap` runs slowly again with 4800 lines of code
    reintroduced required to automatically manage Slingshot files with
    new `bootstrap.slingshot`.  This doesn't have any direct effect on
    users, except that the Slingshot managed release process is much
    more robust, reducing the chances you'll end up with a still-born
    release.

** Incompatible changes:

  - API change in matchers, generalizing the former `format_any_of` to
    `format_alternatives`, with a new `adaptor` parameter for use with
    additional matcher adaptors.

  - API change in both matchers.concat and matchers.reformat, each of
    which now take an additional `adaptor` argument, which can be
    passed in from `format_alternatives` as received so that the
    grammatically best choice of `and` or `or` is used to display the
    list of alternatives when an expectation fails.

  - Calling `require` in a spec file no longer artificially extracts
    symbols from a returned table and injects them into the local
    environment -- because it was inelegant and unnecessary.  If you
    had relied on this feature, simply capture the returned table and
    either manually copy the symbols you need or use a fully qualified
    name.  Previously:

      # Don't do this!
      before:
        require "specl.shell"
      describe spawn:
        expect (spawn "printf hello").should_output "hello"

    Much better:

      # Do this instead.
      before:
        spawn = (require "specl.shell").spawn
      describe spawn:
        expect (spawn "printf hello").should_output "hello"


* Noteworthy changes in release 7 (2013-05-13) [stable]

** Bug fixes:

  - Add missing documentation for `matchers.Matcher.format_any_of`.

  - It's no longer possible to crash Specl using example descriptions
    that look like other types during lyaml parsing.

  - Specl 6 had a broken `should_contain` matcher, that would